bauer/tests/ui/adapter-into-conflict.fail.stderr
error: `into` cannot be added with `adapter`
 --> tests/ui/adapter-into-conflict.fail.rs:5:57
  |
5 |     #[builder(adapter(|x: u32, y: u32| (x + 1, y + 1)), into)]
  |                                                         ^^^^

warning: unused variable: `x`
 --> tests/ui/adapter-into-conflict.fail.rs:5:24
  |
5 |     #[builder(adapter(|x: u32, y: u32| (x + 1, y + 1)), into)]
  |                        ^ help: if this is intentional, prefix it with an underscore: `_x`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `y`
 --> tests/ui/adapter-into-conflict.fail.rs:5:32
  |
5 |     #[builder(adapter(|x: u32, y: u32| (x + 1, y + 1)), into)]
  |                                ^ help: if this is intentional, prefix it with an underscore: `_y`
